{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 425,
  "lineage": "b1fbf80a-719e-6727-5780-754bc02fa0ba",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d1622042e957c247",
            "arn": "arn:aws:ec2:ap-south-1:194978441177:instance/i-04f8ca78ad726fa7c",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sdh",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "Name": "qa-ebs"
                },
                "tags_all": {
                  "Name": "qa-ebs"
                },
                "throughput": 0,
                "volume_id": "vol-0487d196004b9c417",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04f8ca78ad726fa7c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "qa-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ba056c120eb1ad8b",
            "private_dns": "ip-10-22-11-18.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.22.11.18",
            "public_dns": "ec2-65-0-94-20.ap-south-1.compute.amazonaws.com",
            "public_ip": "65.0.94.20",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03ea77dd9d885affa",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-032b5fb83dc45e04f",
            "tags": {
              "Name": "qa-ec2-instance"
            },
            "tags_all": {
              "Name": "qa-ec2-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b1fa98424a320271"
            ]
          },
          "dependencies": [
            "module.ec2_keys.aws_key_pair.generated_key",
            "module.ec2_keys.tls_private_key.ssh_key",
            "module.security_group.aws_security_group.sg",
            "module.vpc-subnets.aws_subnet.web_public_subnet_01",
            "module.vpc-subnets.data.aws_availability_zones.available_zone",
            "module.vpc.aws_vpc.qa-main"
          ]
        }
      ]
    },
    {
      "module": "module.eip",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_for_nat_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04f60bb3b9fe8c375",
            "arn": "arn:aws:ec2:ap-south-1:194978441177:elastic-ip/eipalloc-04f60bb3b9fe8c375",
            "association_id": "eipassoc-06f1eb7cc8d422c60",
            "domain": "vpc",
            "id": "eipalloc-04f60bb3b9fe8c375",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0dac460af416bd7ca",
            "private_dns": "ip-10-22-11-235.ap-south-1.compute.internal",
            "private_ip": "10.22.11.235",
            "public_dns": "ec2-13-202-224-80.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.202.224.80",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "qa-nat-eip-az1"
            },
            "tags_all": {
              "Name": "qa-nat-eip-az1"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.eip",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_for_nat_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-077b0cf86f0d10618",
            "arn": "arn:aws:ec2:ap-south-1:194978441177:elastic-ip/eipalloc-077b0cf86f0d10618",
            "association_id": "eipassoc-0f9886bc095f68666",
            "domain": "vpc",
            "id": "eipalloc-077b0cf86f0d10618",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0e58ae595cf98a4ee",
            "private_dns": "ip-10-22-12-34.ap-south-1.compute.internal",
            "private_ip": "10.22.12.34",
            "public_dns": "ec2-13-202-185-153.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.202.185.153",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "qa-nat-eip-az2"
            },
            "tags_all": {
              "Name": "qa-nat-eip-az2"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.igw",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:194978441177:internet-gateway/igw-0692069c6d2edb135",
            "id": "igw-0692069c6d2edb135",
            "owner_id": "194978441177",
            "tags": {
              "Name": "qa-igw"
            },
            "tags_all": {
              "Name": "qa-igw"
            },
            "vpc_id": "vpc-0f99094bd0fcf5029"
          },
          "dependencies": [
            "module.vpc.aws_vpc.qa-main"
          ]
        }
      ]
    },
    {
      "module": "module.nacl",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:194978441177:network-acl/acl-0314dc2fa7dd3ef52",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0314dc2fa7dd3ef52",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 22,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 101,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "owner_id": "194978441177",
            "subnet_ids": [],
            "tags": {
              "Name": "qa-nacl"
            },
            "tags_all": {
              "Name": "qa-nacl"
            },
            "vpc_id": "vpc-0f99094bd0fcf5029"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.qa-main"
          ]
        }
      ]
    },
    {
      "module": "module.nacl",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 80,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-835032960",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0314dc2fa7dd3ef52",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nacl.aws_network_acl.main",
            "module.vpc.aws_vpc.qa-main"
          ]
        }
      ]
    },
    {
      "module": "module.natgw",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04f60bb3b9fe8c375",
            "association_id": "eipassoc-06f1eb7cc8d422c60",
            "connectivity_type": "public",
            "id": "nat-0869ec527df8a07df",
            "network_interface_id": "eni-0dac460af416bd7ca",
            "private_ip": "10.22.11.235",
            "public_ip": "13.202.224.80",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-032b5fb83dc45e04f",
            "tags": {
              "Name": "qa-nat-gateway-az1"
            },
            "tags_all": {
              "Name": "qa-nat-gateway-az1"
            }
          },
          "dependencies": [
            "module.eip.aws_eip.eip_for_nat_az1",
            "module.vpc-subnets.aws_subnet.web_public_subnet_01",
            "module.vpc-subnets.data.aws_availability_zones.available_zone",
            "module.vpc.aws_vpc.qa-main"
          ]
        }
      ]
    },
    {
      "module": "module.natgw",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-077b0cf86f0d10618",
            "association_id": "eipassoc-0f9886bc095f68666",
            "connectivity_type": "public",
            "id": "nat-07b81cda044fc9fa6",
            "network_interface_id": "eni-0e58ae595cf98a4ee",
            "private_ip": "10.22.12.34",
            "public_ip": "13.202.185.153",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-077d3c49d5d5d85b3",
            "tags": {
              "Name": "qa-nat-gateway-az2"
            },
            "tags_all": {
              "Name": "qa-nat-gateway-az2"
            }
          },
          "dependencies": [
            "module.eip.aws_eip.eip_for_nat_az2",
            "module.vpc-subnets.aws_subnet.web_public_subnet_02",
            "module.vpc-subnets.data.aws_availability_zones.available_zone",
            "module.vpc.aws_vpc.qa-main"
          ]
        }
      ]
    },
    {
      "module": "module.route_tables",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:194978441177:route-table/rtb-02dd7c256b8d3049d",
            "id": "rtb-02dd7c256b8d3049d",
            "owner_id": "194978441177",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0869ec527df8a07df",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "qa-private-route-table-az1"
            },
            "tags_all": {
              "Name": "qa-private-route-table-az1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f99094bd0fcf5029"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eip.aws_eip.eip_for_nat_az1",
            "module.natgw.aws_nat_gateway.nat_gw_az1",
            "module.vpc-subnets.aws_subnet.web_public_subnet_01",
            "module.vpc-subnets.data.aws_availability_zones.available_zone",
            "module.vpc.aws_vpc.qa-main"
          ]
        }
      ]
    },
    {
      "module": "module.route_tables",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:194978441177:route-table/rtb-07eeda58895f75c9f",
            "id": "rtb-07eeda58895f75c9f",
            "owner_id": "194978441177",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-07b81cda044fc9fa6",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "qa-private-route-table-az2"
            },
            "tags_all": {
              "Name": "qa-private-route-table-az2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f99094bd0fcf5029"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eip.aws_eip.eip_for_nat_az2",
            "module.natgw.aws_nat_gateway.nat_gw_az2",
            "module.vpc-subnets.aws_subnet.web_public_subnet_02",
            "module.vpc-subnets.data.aws_availability_zones.available_zone",
            "module.vpc.aws_vpc.qa-main"
          ]
        }
      ]
    },
    {
      "module": "module.route_tables",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:194978441177:route-table/rtb-04ccc3735c915ff05",
            "id": "rtb-04ccc3735c915ff05",
            "owner_id": "194978441177",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0692069c6d2edb135",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "qa-public-route-table"
            },
            "tags_all": {
              "Name": "qa-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f99094bd0fcf5029"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.igw.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.qa-main"
          ]
        }
      ]
    },
    {
      "module": "module.route_tables",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_az1_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0757c6f9b3133826c",
            "route_table_id": "rtb-04ccc3735c915ff05",
            "subnet_id": "subnet-032b5fb83dc45e04f"
          },
          "dependencies": [
            "module.igw.aws_internet_gateway.igw",
            "module.route_tables.aws_route_table.public_route_table",
            "module.vpc-subnets.aws_subnet.web_public_subnet_01",
            "module.vpc-subnets.data.aws_availability_zones.available_zone",
            "module.vpc.aws_vpc.qa-main"
          ]
        }
      ]
    },
    {
      "module": "module.route_tables",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_az2_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08927db59db1af3db",
            "route_table_id": "rtb-04ccc3735c915ff05",
            "subnet_id": "subnet-077d3c49d5d5d85b3"
          },
          "dependencies": [
            "module.igw.aws_internet_gateway.igw",
            "module.route_tables.aws_route_table.public_route_table",
            "module.vpc-subnets.aws_subnet.web_public_subnet_02",
            "module.vpc-subnets.data.aws_availability_zones.available_zone",
            "module.vpc.aws_vpc.qa-main"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:194978441177:security-group/sg-0b1fa98424a320271",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b1fa98424a320271",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "qa-sg",
            "name_prefix": "",
            "owner_id": "194978441177",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "qa-sg"
            },
            "tags_all": {
              "Name": "qa-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f99094bd0fcf5029"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.qa-main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "qa-main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:194978441177:vpc/vpc-0f99094bd0fcf5029",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.22.0.0/16",
            "default_network_acl_id": "acl-01c4a1156ffb76d34",
            "default_route_table_id": "rtb-03ca48326306d636f",
            "default_security_group_id": "sg-0618391ffc80d7507",
            "dhcp_options_id": "dopt-04ef630ab0c25d381",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f99094bd0fcf5029",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03ca48326306d636f",
            "owner_id": "194978441177",
            "tags": {
              "Name": "022.QA-VPC"
            },
            "tags_all": {
              "Name": "022.QA-VPC"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc-subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "backend_private_subnet_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:194978441177:subnet/subnet-068025a144e768809",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.22.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-068025a144e768809",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "194978441177",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "022.QA-VPC-private-subnet-az1"
            },
            "tags_all": {
              "Name": "022.QA-VPC-private-subnet-az1"
            },
            "vpc_id": "vpc-0f99094bd0fcf5029"
          },
          "dependencies": [
            "module.vpc-subnets.data.aws_availability_zones.available_zone",
            "module.vpc.aws_vpc.qa-main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "backend_private_subnet_02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:194978441177:subnet/subnet-0a590ef696f23fc77",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.22.22.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a590ef696f23fc77",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "194978441177",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "022.QA-VPC-private-subnet-az2"
            },
            "tags_all": {
              "Name": "022.QA-VPC-private-subnet-az2"
            },
            "vpc_id": "vpc-0f99094bd0fcf5029"
          },
          "dependencies": [
            "module.vpc-subnets.data.aws_availability_zones.available_zone",
            "module.vpc.aws_vpc.qa-main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_bastian_az_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:194978441177:subnet/subnet-043eb9c60cb6f2c53",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.22.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-043eb9c60cb6f2c53",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "194978441177",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "022.QA-VPC-public-subnet-bastian-az1"
            },
            "tags_all": {
              "Name": "022.QA-VPC-public-subnet-bastian-az1"
            },
            "vpc_id": "vpc-0f99094bd0fcf5029"
          },
          "dependencies": [
            "module.vpc-subnets.data.aws_availability_zones.available_zone",
            "module.vpc.aws_vpc.qa-main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "web_public_subnet_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:194978441177:subnet/subnet-032b5fb83dc45e04f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.22.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-032b5fb83dc45e04f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "194978441177",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "022.QA-VPC-public-subnet-az1"
            },
            "tags_all": {
              "Name": "022.QA-VPC-public-subnet-az1"
            },
            "vpc_id": "vpc-0f99094bd0fcf5029"
          },
          "dependencies": [
            "module.vpc-subnets.data.aws_availability_zones.available_zone",
            "module.vpc.aws_vpc.qa-main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "web_public_subnet_02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:194978441177:subnet/subnet-077d3c49d5d5d85b3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.22.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-077d3c49d5d5d85b3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "194978441177",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "022.QA-VPC-public-subnet-az2"
            },
            "tags_all": {
              "Name": "022.QA-VPC-public-subnet-az2"
            },
            "vpc_id": "vpc-0f99094bd0fcf5029"
          },
          "dependencies": [
            "module.vpc-subnets.data.aws_availability_zones.available_zone",
            "module.vpc.aws_vpc.qa-main"
          ]
        }
      ]
    }
  ]
}